--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -6,7 +6,8 @@
         <fa-icon 
             (click)="onDelete(task)" 
             [ngStyle]="{color: 'red'}" 
-            [icon]="faTimes"></fa-icon>
+            [icon]="faTimes">
+        </fa-icon>
     </h3>
     <p>{{ task.day }}</p>
 </div>
